--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "http://koscode.github.io" # the base hostname & protocol for your site
 theme_settings:
   # Meta
   title: Kevin Kosiorek
-  avatar: /avatar.png
+  avatar: avatar.png
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
 
